tests/regression/error/hw4_error10.correct
operator '>=' requires number * number, found string * none
